# svd

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  CHANGELOG.md.orig  Cargo.toml  NOTES.md  README.md  generate-tests.sh  normalise.sh  release.sh
.github/: bors.toml
.github/workflows/: ci.yml  clippy.yml  rustfmt.yml
ci/: after_success.sh  install.sh  run.sh  script.sh
examples/: EFM32PG1B200F256GM48.svd  STM32F429x.svd  bad-1.xml  bad-2.xml  bad-3.xml  bad-4.xml  good.xml  parse.rs  svd2json.rs
src/: access.rs  addressblock.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  defaults.rs  derive_from.rs  device.rs  elementext.rs  encode.rs  endian.rs  enumerated_value.rs  enumeratedvalue.rs  enumeratedvalues.rs  error.rs  errors.rs  field.rs  helpers.rs  interrupt.rs  lib.rs  parse.rs  peripheral.rs  register.rs  registerarrayinfo.rs  registercluster.rs  registerclusterarrayinfo.rs  registerinfo.rs  svd.rs  tests.rs  types.rs  usage.rs  writeconstraint.rs  writeconstraintrange.rs
src/encode/: access.rs  addressblock.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  device.rs  dimelement.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  modifiedwritevalues.rs  peripheral.rs  register.rs  registercluster.rs  registerinfo.rs  registerproperties.rs  usage.rs  writeconstraint.rs
src/parse/: access.rs  addressblock.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  device.rs  dimelement.rs  elementext.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  modifiedwritevalues.rs  peripheral.rs  register.rs  registercluster.rs  registerinfo.rs  registerproperties.rs  types.rs  usage.rs  writeconstraint.rs
src/svd/: access.rs  addressblock.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  defaults.rs  device.rs  dimelement.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  mod.rs  modifiedwritevalues.rs  peripheral.rs  register.rs  registercluster.rs  registerclusterarrayinfo.rs  registerinfo.rs  registerproperties.rs  usage.rs  writeconstraint.rs
src/tests/: addressblock.rs  bitrange.rs  dimelement.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  registerproperties.rs  usage.rs
svd-encoder/: CHANGELOG.md  Cargo.toml  README.md
svd-encoder/src/: access.rs  addressblock.rs  bitrange.rs  cluster.rs  clusterinfo.rs  config.rs  cpu.rs  datatype.rs  device.rs  dimelement.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  lib.rs  modifiedwritevalues.rs  peripheral.rs  peripheralinfo.rs  protection.rs  readaction.rs  register.rs  registercluster.rs  registerinfo.rs  registerproperties.rs  riscv.rs  usage.rs  writeconstraint.rs
svd-parser/: CHANGELOG.md  Cargo.toml  README.md
svd-parser/examples/: svd2json.rs  svd2yaml.rs
svd-parser/src/: access.rs  addressblock.rs  array.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  datatype.rs  device.rs  dimelement.rs  elementext.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  expand.rs  field.rs  fieldinfo.rs  interrupt.rs  lib.rs  modifiedwritevalues.rs  peripheral.rs  peripheralinfo.rs  protection.rs  readaction.rs  register.rs  registercluster.rs  registerinfo.rs  registerproperties.rs  riscv.rs  types.rs  usage.rs  writeconstraint.rs
svd-rs/: CHANGELOG.md  Cargo.toml  README.md
svd-rs/src/: access.rs  addressblock.rs  array.rs  bitrange.rs  cluster.rs  clusterinfo.rs  cpu.rs  datatype.rs  derive_from.rs  device.rs  dimelement.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  lib.rs  modifiedwritevalues.rs  peripheral.rs  peripheralinfo.rs  protection.rs  readaction.rs  register.rs  registercluster.rs  registerinfo.rs  registerproperties.rs  riscv.rs  usage.rs  writeconstraint.rs
svd-rs/src/riscv/: exception.rs  hart.rs  priority.rs
svdcheck/: Cargo.toml
svdcheck/src/: main.rs
svdpatch/: Cargo.toml  README.md
svdpatch/src/: device.rs  iterators.rs  lib.rs  main.rs  peripheral.rs  register.rs  yaml_ext.rs
tests/: ARM_Sample_faulty.svd  Cargo.toml  bad_svd.rs
tests/bad_svd/: ARM_Sample_faulty.svd  bad-register-size.svd  bitoffset-invalid.svd  derived-from-bad-enumerated-values.svd  derived-from-bad-field-name.svd  derived-from-bad-register-name.svd  enumerated-value-name-missing.svd  field-name-missing.svd  peripheral-name-empty.svd  peripheral-name-missing.svd  peripherals-missing.svd  register-name-missing.svd
tests/src/: access.rs  addressblock.rs  bad_svd.rs  bitrange.rs  cpu.rs  dimelement.rs  endian.rs  enumeratedvalue.rs  enumeratedvalues.rs  field.rs  fieldinfo.rs  interrupt.rs  lib.rs  modifiedwritevalues.rs  register.rs  registerinfo.rs  registerproperties.rs  riscv.rs  usage.rs  writeconstraint.rs
tests/src/tests/: access.rs  endian.rs
