[package]
authors = [
    "The Tools Team <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
description = "A CMSIS-SVD file parser"
documentation = "https://docs.rs/svd-parser"
keywords = ["CMSIS", "SVD", "parser"]
license = "MIT OR Apache-2.0"
name = "svd-parser"
repository = "https://github.com/rust-embedded/svd"
edition = "2018"
version = "0.8.1"
readme = "README.md"

[features]
derive-from = []
unproven = []

[dependencies]
either = "1.5"
xmltree = "0.8"
failure = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "svd2json"
required-features = ["serde"]
