[package]
authors = [
    "The Tools Team <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
description = "A CMSIS-SVD file parser"
documentation = "https://docs.rs/svd-parser"
keywords = ["CMSIS", "SVD", "parser"]
license = "MIT OR Apache-2.0"
name = "svd-parser"
repository = "https://github.com/rust-embedded/svd"
edition = "2018"
version = "0.10.2"
readme = "README.md"

[features]
derive-from = []
strict = ["regex", "once_cell"]

[dependencies]
xmltree = "0.8"
anyhow = "1.0.19"
thiserror = "1.0.5"
rayon = "1.5.0"

[dependencies.regex]
version = "1"
optional = true

[dependencies.once_cell]
version = "1.5.2"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "svd2json"
required-features = ["serde"]
