[package]
authors = ["The Tools Team <tools@teams.rust-embedded.org>"]
description = "A CMSIS-SVD file encoder"
documentation = "https://docs.rs/svd-encoder"
keywords = ["CMSIS", "SVD", "encoder"]
license = "MIT OR Apache-2.0"
name = "svd-encoder"
repository = "https://github.com/rust-embedded/svd"
edition = "2021"
rust-version = "1.56.0"
version = "0.14.1"
readme = "README.md"

[dependencies]
convert_case = "0.5.0"
svd-rs = { version = "0.14.0", path = "../svd-rs" }
thiserror = "1.0.31"

[dependencies.xmltree]
version = "0.10.3"
features = ["attribute-order"]
