[package]
authors = [
    "The Tools Team <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
description = "A CMSIS-SVD file parser"
documentation = "https://docs.rs/svd-parser"
keywords = ["CMSIS", "SVD", "parser"]
license = "MIT OR Apache-2.0"
name = "svd-parser"
repository = "https://github.com/rust-embedded/svd"
edition = "2018"
version = "0.13.0"
readme = "README.md"

[features]
derive-from = ["svd-rs/derive-from"]

[dependencies]
svd-rs = { version = "0.13.0", path = "../svd-rs"}
roxmltree = "0.14.1"
anyhow = "1.0.45"
thiserror = "1.0.30"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8.23"
svd-rs = { version = "0.13.0", path = "../svd-rs", features = ["serde"] }

[[example]]
name = "svd2json"
