[package]
authors = [
    "The Tools Team <tools@teams.rust-embedded.org>",
]
description = "A CMSIS-SVD base structures"
documentation = "https://docs.rs/svd-rs"
keywords = ["CMSIS", "SVD"]
license = "MIT OR Apache-2.0"
name = "svd-rs"
repository = "https://github.com/rust-embedded/svd"
edition = "2018"
version = "0.13.0"
readme = "README.md"

[features]
derive-from = []

[dependencies]
thiserror = "1.0.5"

[dependencies.regex]
version = "1"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
