[package]
authors = [
    "The Tools Team <tools@teams.rust-embedded.org>",
]
description = "A CMSIS-SVD base structures"
documentation = "https://docs.rs/svd-rs"
keywords = ["CMSIS", "SVD"]
license = "MIT OR Apache-2.0"
name = "svd-rs"
repository = "https://github.com/rust-embedded/svd"
edition = "2021"
rust-version = "1.65.0"
version = "0.14.7"
readme = "README.md"

[features]
derive-from = []

[dependencies]
thiserror = "1.0.31"

[dependencies.regex]
version = "1.10"

[dependencies.once_cell]
version = "1.17.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
