[package]
keywords = ["CMSIS", "SVD"]
license = "MIT OR Apache-2.0"
name = "svd-tests"
repository = "https://github.com/rust-embedded/svd"
edition = "2018"
version = "0.10.2"

[dependencies]
svd-rs = { version = "0.10.2", path = "../svd-rs"}
svd-parser = { version = "0.10.2", path = "../svd-parser"}
svd-encoder = { version = "0.10.2", path = "../svd-encoder"}
roxmltree = "0.14.1"
xmltree = "0.10.3"
anyhow = "1.0.19"
