[package]
keywords = ["CMSIS", "SVD"]
license = "MIT OR Apache-2.0"
name = "svd-tests"
repository = "https://github.com/rust-embedded/svd"
edition = "2021"
version = "0.12.0"
publish = false

[features]
unstable-riscv = ["svd-rs/unstable-riscv", "svd-parser/unstable-riscv", "svd-encoder/unstable-riscv"]

[dependencies]
svd-rs = { path = "../svd-rs"}
svd-parser = { path = "../svd-parser"}
svd-encoder = { path = "../svd-encoder"}
roxmltree = "0.20"
xmltree = "0.10.3"
anyhow = "1.0.45"
